bad/2020-07-06/14-33/100.1/build.err
run.c: In function ‘pod’:
run.c:9:5: error: expected expression before ‘char’
  if(char >= 65 && char <= 90){
     ^~~~
run.c:10:11: error: expected identifier or ‘(’ before ‘=’ token
      char = char + 32;
           ^
run.c:11:15: error: expected expression before ‘char’
        return char;
               ^~~~
run.c:11:15: warning: ‘return’ with a value, in function returning void
run.c:7:7: note: declared here
  void pod (char* lunch) {
       ^~~
run.c:12:12: error: expected expression before ‘char’
  } else if(char >= 90 && char <= 122){
            ^~~~
run.c:13:11: error: expected identifier or ‘(’ before ‘=’ token
      char = char - 32;
           ^
run.c:14:13: error: expected expression before ‘char’
      return char;
             ^~~~
run.c:14:13: warning: ‘return’ with a value, in function returning void
run.c:7:7: note: declared here
  void pod (char* lunch) {
       ^~~
run.c:17:14: warning: ‘return’ with a value, in function returning void
       return 0;
              ^
run.c:7:7: note: declared here
  void pod (char* lunch) {
       ^~~